Added add feature